--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
                 <version>3.2.2</version>
             </plugin>
 
+	    <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+            <dependency>
+   	    	<groupId>org.sonarsource.scanner.maven</groupId>
+    	    	<artifactId>sonar-maven-plugin</artifactId>
+    		<version>4.0.0.4121</version>
+	    </dependency>
+
         </plugins>
     </build>
 
